add_subdirectory(sexpresso)
add_subdirectory(util)
add_subdirectory(container)
add_subdirectory(expr)
add_subdirectory(smt)
add_subdirectory(preprocessing)
add_subdirectory(recurrence)
add_subdirectory(acceleration)
add_subdirectory(itsproblem)
add_subdirectory(chcproblem)
add_subdirectory(safetyproblem)
add_subdirectory(transformations)

